# Mini-GoogleDrive

./: .gitignore  README.md
Client/: CMakeLists.txt  main.cpp
Client/include/: Client.h  Logger.h  ServerConfig.h  Session.h
Client/src/: Client.cpp  IoThread.cpp  Logger.cpp  Session.cpp
Clients_StressTest/: CMakeLists.txt  TODO.md  main.cpp
Clients_StressTest/include/: ConnectionManager.h  ServerData.h  StressTest.h
Clients_StressTest/src/: ConnectionManager.cpp  StressTest.cpp
Server/: CMakeLists.txt  main.cpp
Server/include/: Acceptor.h  IoThread.h  Logger.h  Server.h  ServerConfig.h  ServerStatus.h  Session.h
Server/src/: Acceptor.cpp  Logger.cpp  Server.cpp  ServerConfig.cpp  ServerStatus.cpp  Session.cpp
